Prevent text overflow, relative lock icon position

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -231,8 +231,10 @@ $kw: 60px;
 
                             .caption {
                                 width:50%;
+                                height:90%;
                                 padding: 25px;
                                 line-height:25px;
+                                overflow:auto;
 
                                 h1 {
                                     font-family:$goff;
@@ -355,8 +357,8 @@ $kw: 60px;
 
             .lock {
                 position:absolute;
-                right: 10px;
-                top:10px;
+                right: 1%;
+                top:1%;
                 width:20px;
                 cursor:pointer;
                 z-index:100;
